[B]Version 1.0.98[/B]
Changed: Small update


[B]Version 1.0.97[/B]
Fixed: Porndig


[B]Version 1.0.96[/B]
Added: Videowood and Jetload video hosts
Changed: All the video hosts in utils.py have support for multiple videos


[B]Version 1.0.95[/B]
Added: Anybunny
Changed: Converted most of the OK dialogs to notifications


[B]Version 1.0.94[/B]
Fixed: xxxstreams(org) pagination


[B]Version 1.0.93[/B]
Fixed: Openload
Fixed: Streamxxx movie url
Added: Multiple video support for Streamcloud


[B]Version 1.0.92[/B]
Fixed: Nudeflix
Fixed: Porn00
Fixed: HQporner


[B]Version 1.0.91[/B]
Added: Eroticage


[B]Version 1.0.90[/B]
Fixed: Unplayable item bug
Removed: javhdonline and jav720p because of questionable content


[B]Version 1.0.89[/B]
Fixed: Multiple keyword search for ParadiseHill
Fixed: xxxstreams (org) videos wouldn't load on Android


[B]Version 1.0.88[/B]
Added: xxxstreams (org) (Anton40)
Added: jav720p
Added: Search for Paradisehill ;)


[B]Version 1.0.87[/B]
Fixed: Quick fix for OpenLoad


[B]Version 1.0.86[/B]
Added: xxxstreams (eu)
Removed: jsbeautifier, now using the jsunpack module by Bstrdsmkr


[B]Version 1.0.85[/B]
Fixed: Streamin.to playback
Fixed: Improved Pornhive, also added streamin.to support


[B]Version 1.0.84[/B]
Fixed: Videomega playback
Fixed: Pornhive


[B]Version 1.0.83[/B]
Added: CzechHD
Added: Webcam image refresh in Favorites listing
Changed: Chaturbate listing


[B]Version 1.0.82[/B]
Added: You can now add/use keywords for every site with a search function


[B]Version 1.0.81[/B]
Changed: Cam4 rtmp url, now you can use it with an external player like VLC
Changed: Added User-agent to Chaturbate stream


[B]Version 1.0.80[/B]
Added: Porndig
Added: AbsoluPorn
Changed: MrSexe improvements


[B]Version 1.0.79[/B]
Added: Option for ParadiseHill in addon settings, to play all the parts as 1 playlist
Fixed: Cam4 fix for people not getting the cam list (I hope)
Changed: Very small improvement in videohost detection


[B]Version 1.0.78[/B]