@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.uwc"
        name="Ultimate Whitecream"
-       version="1.0.98"
+       version="1.0.99"
        provider-name="mortael">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
