@@ -1,3 +1,7 @@
+[B]Version 1.0.99[/B]
+Added: More supported hosts for Pornhive
+
+
 [B]Version 1.0.98[/B]
 Changed: Small update
 
